[HOPS-1378] Move most of the codebase to hadoop 3.2.0